set(TARGET radiumCore)

set(LIBRARY_VERSION "0.1.0")

find_package(OpenGL     REQUIRED)

set(HEADER_PATH ../include)

set(LIBS ${OPENGL_LIBRARIES})

file(GLOB_RECURSE SOURCE_FILES *.cpp)
set(SOURCE ${SOURCE_FILES})

file(GLOB_RECURSE HEADER_FILES ${HEADER_PATH}/*.h ${HEADER_PATH}/*.hpp)
set(HEADER ${HEADER_FILES})

file(GLOB_RECURSE INL_FILES ${HEADER_PATH}/*.inl)
set(INL ${HEADER_FILES})

include_directories(
  ${HEADER_PATH}
  ${EIGEN_INC}
)

add_library(
 ${TARGET} STATIC
 ${SOURCE}
 ${HEADER}
 ${INL}
)

SET_TARGET_PROPERTIES(
  ${TARGET}
  PROPERTIES
  VERSION ${LIBRARY_VERSION}
)

target_link_libraries(
  ${TARGET}
  ${LIBS}
)

INSTALL(
  TARGETS ${TARGET}
  DESTINATION ${LIB_INSTALL_DIR}
)
